# Libreria_estandar_de_C

./: CMakeLists.txt  README.md
EJERCICIO/: main.c
EJERCICIO_1/: main_1.c
EJERCICIO_2/: main_2.c
EJERCICIO_3/: main_3.c
