cmake_minimum_required(VERSION 3.29)
project(CompareStrings C)

set(CMAKE_C_STANDARD 11)

add_executable(CompareStrings
        EJERCICIO/main.c
)

add_executable(CompareStrings1
        EJERCICIO_1/main_1.c)

add_executable(CompareStrings2
        EJERCICIO_2/main_2.c)

add_executable(CompareStrings3
        EJERCICIO_3/main_3.c)
